основной функционал чата, фоновые сообщения из бэка

--- a/UI/wwwroot/index.html
+++ b/UI/wwwroot/index.html
@@ -7,7 +7,7 @@
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="manifest.json" rel="manifest" />
-    
+    <link href="css/toastr.min.css" rel="stylesheet"/>
     <!-- If you add any scoped CSS files, uncomment the following to load them
     <link href="UI.styles.css" rel="stylesheet" /> -->
 </head>
@@ -22,6 +22,10 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
+    <script src="_content/Radzen.Blazor/Radzen.Blazor.min.js"></script>
+    <script src="js/jquery-3.7.1.min.js"></script>
+    <script src="js/toastr.min.js"></script>
+    <script src="js/alert-service.js"></script>
 </body>
 
 </html>
